# zSILENCER

./: .gitignore  CLAUDE.md  CMakeLists.txt  vcpkg.json
.github/workflows/: deploy.yml  release.yml
docs/: design-system.md
docs/specs/: 01-world-and-physics.md  02-entities-and-objects.md  03-player-mechanics.md  04-weapons-and-projectiles.md  05-teams-and-agencies.md  06-economy-and-items.md  07-game-objectives.md  08-npcs-and-security.md  09-map-and-environment.md  10-progression-and-stats.md  11-animation-system.md  README.md
docs/superpowers/plans/: 2026-04-19-auto-updater.md
docs/superpowers/specs/: 2026-04-19-auto-updater-design.md
scripts/: fastdeploy.sh  test-updater.ps1  test-updater.sh
server/: client.go  discord.go  discord_test.go  hub.go  hub_test.go  main.go  protocol.go  protocol_test.go  update.go  update_test.go
src/: game.cpp  game.h  interface.cpp  lobby.cpp  lobby.h  main.cpp  os.cpp  palette.cpp  resources.cpp  shared.h  textbox.cpp  textbox.h  updater.cpp  updater.h  updaterdownload.cpp  updaterdownload.h  updatersha256.cpp  updatersha256.h  updaterstage2.cpp  updaterstage2.h  updaterzip.cpp  updaterzip.h  world.cpp
terraform/: backend.hcl.example  backend.tf  cloud-init.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/: main.tf  terraform.tfvars.example  variables.tf
tests/: CMakeLists.txt  smoke_test.cpp  updater_download_test.cpp  updater_sha256_test.cpp  updater_sm_test.cpp  updater_zip_test.cpp
